syntax = "proto3";

package sites;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";


message Site {
    string _id = 1;
    string siteName = 2;
    google.protobuf.Struct device = 3;
    string siteId = 4;
    google.protobuf.Timestamp dateCreated = 5;
}
message SiteRequest {
    string id = 1;
}

service Sites {
    rpc CreateSite(stream Site) returns (google.protobuf.Empty) {}
    rpc GetSites(google.protobuf.Empty) returns (stream Site) {};
    rpc GetSite(SiteRequest) returns (Site) {};
}
