syntax = "proto3";

package sitesections;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";


message SiteSection {
    string _id = 1;
    string siteSectionName = 2;
    google.protobuf.Struct appname = 3;
    google.protobuf.Struct device = 4;
    google.protobuf.Struct channel = 5;
    string siteSectionId = 6;
    string siteId = 7;
    google.protobuf.Timestamp dateCreated = 8;
}
message SiteSectionRequest {
    string id = 1;
}

service SiteSections {
    rpc CreateSiteSection(stream SiteSection) returns (google.protobuf.Empty) {}
    rpc GetSiteSections(google.protobuf.Empty) returns (stream SiteSection) {};
    rpc GetSiteSection(SiteSectionRequest) returns (SiteSection) {};
}
